[package]
name = "pallet-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
pallet-evm = { workspace = true }
evm = { workspace = true}
sp-core = { workspace = true }
codec = { package = "parity-scale-codec", workspace = true }
scale-info = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "codec/std",
	"scale-info/std",
]