[package]
name = "pallet-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
pallet-evm = { workspace = true }
evm = { workspace = true}
sp-core = { workspace = true }
codec = { package = "parity-scale-codec", workspace = true }
scale-info = { workspace = true }
sp-io = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }

[dev-dependencies]
fp-evm = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "codec/std",
	"scale-info/std",
	"pallet-balances/std",
	"pallet-evm/std",
	"pallet-timestamp/std",
	"sp-io/std",
	"fp-evm/std",
]