[package]
name = 'pallet-upgrade-runtime-proposal'
version = '1.0.0'
edition = '2021'


[dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true }
syn = { workspace = true }
parity-scale-codec = { workspace = true }
stbl-tools = { workspace = true }
log = { workspace = true }

[dev-dependencies]
stability-test-runtime-client = { workspace = true }
sp-version = { workspace = true }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'frame-benchmarking/std',
    'frame-support/std',
    'frame-system/std',
    'scale-info/std',
    'sp-core/std',
    'sp-std/std',
    'sp-runtime/std',
    'parity-scale-codec/std',
    'log/std'
]
try-runtime = ['frame-support/try-runtime']