[package]
name = 'pallet-upgrade-runtime-proposal'
version = '1.0.0'
edition = '2021'


[dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true }
syn = { workspace = true }
parity-scale-codec = { workspace = true }
stbl-tools = { workspace = true }
log = { workspace = true }
staging-xcm = { workspace = true }

[dev-dependencies]
substrate-test-runtime-client = { workspace = true }
sp-version = { workspace = true }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	'frame-benchmarking/std',
	'frame-support/std',
	'frame-system/std',
	'log/std',
	'parity-scale-codec/std',
	'scale-info/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-std/std',
	'staging-xcm/std',
]
try-runtime = ['frame-support/try-runtime']
