[package]
name = 'pallet-validator-set'
version = '1.0.0'
edition = '2021'


[dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-staking = { workspace = true }
log = { workspace = true }
codec = { package = "parity-scale-codec", workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-session = { workspace = true }
scale-info = { workspace = true }
syn = { workspace = true }
pallet-custom-balances = { workspace = true }
stbl-tools = { workspace = true }

[dev-dependencies]
serde = { version = '1.0.126',features = ['derive'] }


[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'frame-benchmarking/std',
    'frame-support/std',
    'frame-system/std',
    'scale-info/std',
    'sp-core/std',
    'sp-io/std',
    'sp-std/std',
    'sp-runtime/std',
    'pallet-session/std'
]
try-runtime = ['frame-support/try-runtime']
