[package]
name = 'pallet-validator-set'
version = '1.0.0'
edition = '2021'


[dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-staking = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-session = { workspace = true }
scale-info = { workspace = true }
syn = { workspace = true }
sp-application-crypto = { workspace = true }

[dev-dependencies]
serde = { version = '1.0.126', features = ['derive'] }
sp-state-machine = { workspace = true }


[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	'frame-benchmarking/std',
	'frame-support/std',
	'frame-system/std',
	'pallet-session/std',
	'parity-scale-codec/std',
	'scale-info/std',
	'sp-core/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-std/std',
]
try-runtime = ['frame-support/try-runtime']
