[package]
name = "precompile-delegated-transaction"
authors = { workspace = true }
description = "A Precompile to dispatch a call with a ERC712 delegated transaction."
edition = "2021"
version = "0.1.0"

[dependencies]
log = { workspace = true }
num_enum = { version = "0.5.3", default-features = false }
paste = "1.0.6"
slices = "0.2.0"
codec = { package = "parity-scale-codec", workspace = true }

# Moonbeam
precompile-utils = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-timestamp = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }

# Frontier
evm = { workspace = true, features = [ "with-codec" ] }
fp-evm = { workspace = true }
pallet-evm = { workspace = true, features = [ "forbid-evm-reentrancy" ] }

[dev-dependencies]
derive_more = { version = "0.99" }
hex-literal = "0.3.4"
libsecp256k1 = "0.7"
serde = { version = "1.0.100" }
sha3 = "0.10"

pallet-balances = { workspace = true, features = [ "std" ] }
pallet-timestamp = { workspace = true, features = [ "std" ] }
precompile-utils = { workspace = true, features = [ "std", "testing" ] }
scale-info = { workspace = true, features = [ "derive", "std" ] }
sp-runtime = { workspace = true, features = [ "std" ] }

[features]
default = [ "std" ]
std = [
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]