[package]
name = "precompile-map-svm-evm-controller"
authors = [ "Stability" ]
description = "A Precompile to unlink accounts from the EVM to the SVM"
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Substrate
sp-core = { workspace = true }
codec = { package = "parity-scale-codec", workspace = true }
frame-system = { workspace = true }
frame-support = { workspace = true }
sp-std = { workspace = true }
pallet-timestamp ={ workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true, features = [ "forbid-evm-reentrancy" ] }

# Stability
pallet-map-svm-evm = { workspace = true }
precompile-utils = { workspace = true }

[dev-dependencies]
sp-runtime = { workspace = true }
pallet-balances = { workspace = true }
scale-info = { workspace = true }
sha3 = "0.10"
precompile-utils = { workspace = true, features = [ "testing" ] }
sp-io = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }

[features]
default = [ "std" ]
std = [
    "precompile-utils/std",
    "sp-core/std",
    "fp-evm/std",
    "pallet-evm/std",
    "precompile-utils/std",
    "frame-system/std",
    "frame-support/std",
    "sp-std/std",
    "pallet-timestamp/std",
    "pallet-map-svm-evm/std",
    "pallet-balances/std",
]