[package]
name = "precompile-upgrade-runtime-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Substrate
sp-core = { workspace = true }
parity-scale-codec = { workspace = true }
frame-system = { workspace = true }
frame-support = { workspace = true }
sp-std = { workspace = true }
pallet-timestamp = { workspace = true }
sp-version = { workspace = true }
sp-runtime = { workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true, features = ["forbid-evm-reentrancy"] }

# Stability
pallet-upgrade-runtime-proposal = { workspace = true }
precompile-utils = { workspace = true }
pallet-collective = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true }
pallet-session = { workspace = true }
sp-runtime = { workspace = true }
precompile-utils = { workspace = true, features = ["testing"] }
scale-info = { version = "2.0", default-features = false, features = [
	"derive",
] }
sha3 = "0.10"
sp-io = { workspace = true }
substrate-test-runtime-client = { workspace = true }
stbl-core-primitives = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-session/std",
	"pallet-collective/std",
	"pallet-upgrade-runtime-proposal/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
