[package]
name = "precompile-validator-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
precompile-utils = { workspace = true }

# Substrate
sp-core = { workspace = true }
frame-system = { workspace = true }
frame-support = { workspace = true }
sp-std = { workspace = true }
pallet-timestamp ={ workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true, features = [ "forbid-evm-reentrancy" ] }

# Stability
pallet-validator-set = { workspace = true }

[features]
default = [ "std" ]
std = [
    "precompile-utils/std",
    "sp-core/std",
	"fp-evm/std",
	"precompile-utils/std",
    "pallet-validator-set/std",
    "frame-system/std",
    "frame-support/std",
    "sp-std/std",
]
