[package]
name = "precompile-validator-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Substrate
sp-core = { workspace = true }
parity-scale-codec = { workspace = true }
frame-system = { workspace = true }
frame-support = { workspace = true }
sp-std = { workspace = true }
pallet-timestamp = { workspace = true }
sp-runtime = { workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true, features = ["forbid-evm-reentrancy"] }

# Stability
pallet-validator-set = { workspace = true }
precompile-utils = { workspace = true }
pallet-custom-balances = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true }
pallet-session = { workspace = true }
sp-runtime = { workspace = true }
precompile-utils = { workspace = true, features = ["testing"] }
scale-info = { version = "2.0", default-features = false, features = [
    "derive",
] }
sha3 = "0.10"
sp-io = { workspace = true }
stbl-core-primitives = { workspace = true, features = ["std"] }
pallet-user-fee-selector = { workspace = true }
sp-staking = { workspace = true }

[features]
default = [ "std" ]
std = [
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-session/std",
	"pallet-validator-set/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
